@@ -129,7 +129,7 @@ void ValueString::OnValueRefreshed
 	string const& _value
 )
 {
-	switch( VerifyRefreshedValue( (void*) &m_value, (void*) &m_valueCheck, (void*) &_value, 1) )
+	switch( VerifyRefreshedValue( (void*) &m_value, (void*) &m_valueCheck, (void*) &_value, ValueID::ValueType_String) )
 	{
 	case 0:		// value hasn't changed, nothing to do
 		break;
